fix weird code blocks. Now 90% less weird. Line height was too high and bg color didnt match.

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -36,6 +36,11 @@ text-decoration: underline;
 font-size: 1.5em;
 }
 
+div.highlight pre {
+  background-color: #333333 !important;
+  line-height: 1.8em;
+}
+
 @media screen and (min-width: 1199px) {
 div.content section.container.post {
 max-width: 90%;
